--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lightning",
+  "name": "lightning-js",
   "version": "0.2.4",
   "description": "A modern, fast framework built on Pixi.js for all WebGL and Canvas games and apps.",
   "main": "dist/lightning.js",
@@ -9,7 +9,7 @@
     "compile": "tsc",
     "build": "NODE_ENV=production & webpack",
     "definitions": "cat *.txt >> all.txt",
-    "test": "node node_modules/mocha/bin/mocha",
+    "test": "node node_modules/mocha/bin/mocha -r jsdom-global/register",
     "coverage": "npm run build && istanbul cover _mocha -- -R spec",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "docs": "node node_modules/typedoc/bin/typedoc --exclude node_modules --ignoreCompilerErrors  --out docs/ lib/",
@@ -19,7 +19,8 @@
   "license": "ISC",
   "devDependencies": {
     "brfs": "^1.4.3",
-    "chalk": "^1.1.3",
+    "chai": "^3.5.0",
+    "chalk": "^1.1.3-",
     "chokidar": "^1.6.1",
     "concat-files": "^0.1.1",
     "copy-webpack-plugin": "^4.0.1",
@@ -29,10 +30,15 @@
     "gulp-concat": "^2.6.1",
     "gulp-minify": "0.0.15",
     "istanbul": "^0.4.5",
+    "jsdom": "9.11.0",
+    "jsdom-global": "2.1.1",
     "matter-js": "^0.11.1",
     "mocha": "^3.2.0",
+    "mocha-jsdom": "^1.1.0",
     "pixi.js": "^4.3.4",
+    "pkg-config": "^1.1.1",
     "requirejs": "^2.3.2",
+    "sinon": "^1.17.7",
     "transform-loader": "^0.2.3",
     "typedoc": "^0.5.5",
     "typescript": "^2.1.5",
