--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightning-js",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "A modern, fast framework built on Pixi.js for all WebGL and Canvas games and apps.",
   "main": "dist/lightning.js",
   "types": "dist/index.d.ts",
@@ -9,8 +9,10 @@
     "compile": "tsc",
     "concat": "gulp concat",
     "concat-dts": "gulp concat-dts",
+    "push-test": "gulp push-to-test",
     "minify": "gulp minify",
-    "build": "npm-run-all compile concat concat-dts minify"
+    "build": "npm-run-all compile concat concat-dts minify",
+    "build:dev": "npm-run-all compile concat concat-dts push-test"
   },
   "author": "Nicholas Mordecai",
   "license": "ISC",
