--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
   "ref": "master",
   "path": "typings",
   "compilerOptions": {
-    "module": "umd",
+    "module": "amd",
     "target": "es5",
-    "moduleResolution": "node",
     "declaration": true,
     "sourceMap": true,
-    "outDir": "build"
+    "outDir": "build",
+    "outFile": "./build/compile.js"
   },
   "exclude": [
     "node_modules",
