--- a/cli/templates/basic/package.json
+++ b/cli/templates/basic/package.json
@@ -19,7 +19,6 @@
     "browser-sync": "^2.18.7",
     "browserify": "^14.1.0",
     "concurrently": "^3.3.0",
-    "copy-webpack-plugin": "^3.0.1",
     "file-loader": "^0.9.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
@@ -33,20 +32,14 @@
     "gulp-replace": "^0.5.4",
     "gulp-server-livereload": "^1.9.2",
     "gulp-sourcemaps": "^2.4.1",
-    "karma-typescript-preprocessor": "^0.2.1",
     "transform-loader": "^0.2.3",
     "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.2",
     "typescript": "^2.1.6",
     "typescript-loader": "^1.1.3",
-    "typings": "^0.8.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "1.14.0",
-    "webpack-merge": "^0.12.0"
+    "typings": "^0.8.1"
   },
   "dependencies": {
-    "lightning-js": "^0.2.4"
+
   }
 }
