fixed circle.yml formatting

--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     # Circle will use node v6.9.1
     version: 6.9.1
   pre:
-    - npm install -g gulp
-    test:
-  override:
-    - npm test
+    npm install -g gulp
+  test:
+    override:
+      - npm test
