more automation and inclusion of dev environment

--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
   "scripts": {
     "postinstall": "npm run build",
     "start": "",
+    "dev": "concurrently --kill-others   \"tsc -w --p dev/tsconfig.dev.json\"  \"gulp watch\"  \"tsc --outfile build/compile.js -w\" ",
+    "dev-watch": "tsc -w --p dev/tsconfig.dev.json",
+    "dev-serve": "gulp watch",
     "compile": "tsc",
     "ts-compile": "tsc --outfile build/compile.js",
     "concat": "gulp concat",
     "concat-dts": "gulp concat-dts",
-    "push-test": "gulp push-to-test",
     "minify": "gulp minify",
     "docs": "./node_modules/.bin/typedoc --mode file --out docs/ src/",
     "build": "npm-run-all compile ts-compile concat concat-dts minify",
-    "build:dev": "npm-run-all ts-compile concat concat-dts push-test",
     "test": "./node_modules/karma/bin/karma start karma.conf.js"
   },
   "author": "Nicholas Mordecai",
   "license": "ISC",
   "devDependencies": {
     "brfs": "^1.4.3",
+    "browser-sync": "^2.18.8",
     "concat-files": "^0.1.1",
+    "concurrently": "^3.4.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-minify": "0.0.15",
+    "gulp-rename": "^1.2.2",
     "gulp-webserver": "^0.9.1",
     "istanbul": "^0.4.5",
     "jasmine-core": "^2.5.2",
@@ -46,8 +51,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-typescript": "^3.0.0",
-    "phantomjs": "^2.1.7",
     "npm-run-all": "^4.0.2",
+    "phantomjs": "^2.1.7",
     "pixi.js": "^4.4.1",
     "transform-loader": "^0.2.4",
     "typedoc": "https://github.com/DatenMetzgerX/typedoc/tarball/typescript-2-build",
