--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
   "exclude": [
     "node_modules",
     "typings/global",
-    "typings/index.d.ts"
+    "typings/index.d.ts",
+    "./src/particleEmitter"
   ],
   "files": [
     "./src/core/engine.ts"
