--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "chalk": "^1.1.3",
     "copy-dir": "^0.3.0",
     "npm-run-all": "^4.0.2",
+    "pixi.js": "^4.5.1",
     "yargs": "^7.0.1"
   }
 }
