--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "phantomjs": "^2.1.7",
     "pixi.js": "^4.5.2",
     "transform-loader": "^0.2.4",
+    "tslint": "^5.5.0",
     "typedoc": "https://github.com/DatenMetzgerX/typedoc/tarball/typescript-2-build",
     "typescript": "^2.2.1",
     "typescript-compiler": "^1.4.1-2",
