--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-coverage": "^0.1.4",
     "karma-remap-istanbul": "^0.6.0",
+    "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-typescript": "^3.0.0",
