--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,7 @@ machine:
   dependencies:
     post:
       - npm run build
-  tests:
-    post:
-    - coveralls
+notify:
+  webhooks:
+    # A list of hook hashes, containing the URL field
+    - url: https://coveralls.io/webhook?repo_token=dvZftQyQScO7I1aR4cTzZHGXk7s5ejbMj
