--- a/package.json
+++ b/package.json
@@ -21,26 +21,27 @@
     "docs": "./node_modules/.bin/typedoc --mode file --out docs/ src/",
     "build": "npm-run-all compile ts-compile concat concat-dts minify",
     "test": "./node_modules/karma/bin/karma start karma.conf.js",
-    "posttest": "gulp coverage"
+    "codecov": "codecov"
   },
   "author": "Nicholas Mordecai",
   "license": "ISC",
   "devDependencies": {
     "brfs": "^1.4.3",
     "browser-sync": "^2.18.8",
+    "codecov": "^3.0.0",
     "concat-files": "^0.1.1",
     "concurrently": "^3.4.0",
+    "coveralls": "^3.0.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
-    "gulp-coveralls": "^0.1.4",
     "gulp-minify": "0.0.15",
     "gulp-rename": "^1.2.2",
     "gulp-webserver": "^0.9.1",
     "istanbul": "^0.4.5",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.6.0",
+    "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.1",
