--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightning-js",
-  "version": "0.5.0",
+  "version": "0.5.3",
   "description": "A modern, fast framework built on Pixi.js for all WebGL and Canvas games and apps.",
   "main": "dist/lightning.js",
   "types": "dist/index.d.ts",
@@ -41,6 +41,7 @@
     "gulp-webserver": "^0.9.1",
     "istanbul": "^0.4.5",
     "jasmine-core": "^2.5.2",
+    "jsdoc": "^3.5.5",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
