--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
+    "gulp-coveralls": "^0.1.4",
     "gulp-minify": "0.0.15",
     "gulp-rename": "^1.2.2",
     "gulp-webserver": "^0.9.1",
